--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,12 @@ header {
   z-index: 1000;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .header-left{
   display: flex;
   width: 600px;
+  align-items: baseline;
 }
 
 header h1 {
@@ -60,6 +62,7 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
+  color: white;
 }
 .user-info{
   margin-right: 40px;
@@ -74,21 +77,46 @@ nav button {
   margin-left: 10px;
   transition: background-color 0.1s ease;
 }
+.user-info{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .user-email {
   margin-left: auto;
   padding: 10px;
-  color: #ffffff;
+  color: #61dafb;
   font-size: 14px;
+  text-decoration: none;
 }
-
-nav button:hover {
+.user-email:hover {
+  text-decoration: underline;
+}
+.user-username {
+  /* margin-right: 20px; */
+  padding: 10px;
+  color: #61dafb;
+  font-size: 14px;
+  text-decoration: none;
+}
+.user-username:hover {
+  text-decoration: underline;
+}
+.user-info button {
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.user-info button:hover {
   background-color: #21a1f1;
 }
 
+
 footer p {
+  margin: 10px 0 0;
   font-size: 14px;
   color: #9e9e9e;
-  margin: 0;
 }
 
 .container {
@@ -111,4 +139,28 @@ h2 {
 p {
   font-size: 16px;
   color: #e0e0e0;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  padding: 20px;
+  color: white;
+}
+
+.App-header nav a {
+  color: white;
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.App-header nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 20px;
 }
