--- a/src/Profile.css
+++ b/src/Profile.css
@@ -92,6 +92,23 @@ button:hover {
 .upload-button:hover {
   background-color: #21a1f1;
 }
+.input-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  min-height: 90px;
+}
+.profile-button{
+  margin-top: -10px;
+  
+}
+.input-group input{
+  padding-right: 40px;
+  max-width: 180px;
+  max-height: 90px;
+  padding: 11px 11px;
+}
 
 .password-place {
   display: flex;
@@ -118,7 +135,9 @@ button:hover {
   padding: 11px 11px;
 }
 
-
+.password-container profile-button{
+  
+}
 .toggle-password {
   background: none;
   border: none;
